--- a/Health_Chile_2018/Nurses and Midwives.Rmd
+++ b/Health_Chile_2018/Nurses and Midwives.Rmd
@@ -116,14 +116,12 @@ Health <- read_excel("Health_2.xlsx")
 Health_Nur <- Health %>%
   select(Country, `Nursesandmidwivesper1,000people`) %>%
   filter(`Nursesandmidwivesper1,000people`!= "..", Country %in%
-           c("Argentina", "Chile", "Cuba", "Uruguay", "Italy", "Spain", "Finland",
-             "Denmark", "Austrlia", "New Zealand", "Europe & Central Asia", "Belgium",
-             "Croatia", "Norway", "Costa Rica", "United Kingdom", "North America",
-             "Canada", "Japan", "Mexico", "Poland", "Latin America & Caribbean",
-             "Brazil", "Colombia", "China", "Ecuador", "East Asia & Pacific",
-             "Bolivia", "Panama", "World", "Paraguay", "Peru", "India",
-             "United States", "Greece", "Austria", "Portugal", "Israel", "Germany",
-             "Russian Federation", "Denmark", "Hungary")) %>%
+           c("Cuba", "Greece", "Austria", "Uruguay", "Israel",
+             "Switzerland", "Germany", "Argentina", "Italy", "Denmark", "Russian Federation",
+             "Spain", "Finland", "Australia", "Europe & Central Asia", "France", "Costa Rica", "United Kingdom", "Canada",
+             "Chile", "United States", "North America", "Japan", "Mexico",
+             "Latin America & Caribbean", "Brazil", "China", "East Asia & Pacific",
+             "Bolivia", "Panama", "World", "Peru")) %>%
   arrange(`Nursesandmidwivesper1,000people`) # Reorder the data
 
 Health_Nur$`Nursesandmidwivesper1,000people` <- as.numeric(as.character(Health_Nur$`Nursesandmidwivesper1,000people`)) #Transform column character to numeric
@@ -133,16 +131,15 @@ Health_Nur$`Nursesandmidwivesper1,000people` <- as.numeric(as.character(Health_N
 Health_Nur %>%
   mutate(Country = fct_reorder(Country, `Nursesandmidwivesper1,000people`)) %>%
   ggplot(aes(x = Country, y = `Nursesandmidwivesper1,000people`)) +
-  geom_segment(aes(x = Country, xend = Country, y = 0, yend = `Nursesandmidwivesper1,000people`), color = ifelse(Health_Nur$Country %in% c("Chile"), "brown3", "gray58"), size = ifelse(Health_Nur$Country %in% c("Chile"), 1.5, 0.8)) +
-  geom_point(color = ifelse(Health_Nur$Country %in% c("Chile"), "brown3", "gray58"), size = ifelse(Health_Nur$Country %in% c("Chile"), 4.2, 2.5)) +
+  geom_segment(aes(x = Country, xend = Country, y = 0, yend = `Nursesandmidwivesper1,000people`), color = ifelse(Health_Nur$Country %in% c("Chile"), "brown3", "gray58"), size = ifelse(Health_Nur$Country %in% c("Chile"), 1.1, 0.8)) +
+  geom_point(color = ifelse(Health_Nur$Country %in% c("Chile"), "brown3", "gray58"), size = ifelse(Health_Nur$Country %in% c("Chile"), 3.4, 2)) +
   coord_flip() +
   theme_elegante() +
-  xlab("Country") +
-  ylab("Nurses and midwives (per 1,000 people)") +
-  labs(title = paste("What is the relationship between Nurses and midwives and countries worldwide?"), 
+  ylab("Nurses and Midwives (per 1,000 people)") +
+  labs(title = paste("Nurses and Midwives every 1,000 People\n", "by Country"), 
        caption = "World Health Organization's Global Health Workforce Statistics, OECD, supplemented by country data.",
        subtitle = paste0("Situation of Chile and the world\n", "2013 - 2018" )) +
-  geom_text(aes(label = Health_Nur$`Nursesandmidwivesper1,000people`), hjust = -.8, nudge_x = 0, color = "gray46", size = 3.5) +
+  geom_text(aes(label = Health_Nur$`Nursesandmidwivesper1,000people`), hjust = -.8, nudge_x = 0, color = "gray46", size = 3.1) +
   scale_y_continuous(breaks = c(2, 4, 6, 8, 10, 12, 14, 16, 18, 20)) +
   theme(panel.grid.major.y = element_blank(), panel.border = element_blank(), axis.ticks.y = element_blank()) +
   theme(axis.title.y=element_blank(),
