--- a/Health_Chile_2018/Out of pocket.Rmd
+++ b/Health_Chile_2018/Out of pocket.Rmd
@@ -1,5 +1,7 @@
 ---
-title: "Physicians"
+title: "Out of pocket"
+author: "Ignacio Zamora"
+date: "02-01-2021"
 output: html_document
 ---
 
@@ -105,36 +107,37 @@ Health <- read_excel("Health_2.xlsx")
 
 ```{r, echo = FALSE, eval = TRUE, warning = FALSE}
 
-# Physicians Data
-Health_Phys <- Health %>%
-  select(Country, `Physiciansper1,000people2013-18`) %>%
-  filter(`Physiciansper1,000people2013-18` != "..", Country %in%
+# Out of pocket Data
+
+Health_Out <- Health %>%
+  select(Country, `Out of pocket%ofcurrent2018`) %>%
+  filter(`Out of pocket%ofcurrent2018`!= "..", Country %in%
            c("Cuba", "Greece", "Austria", "Uruguay", "Israel",
              "Switzerland", "Germany", "Argentina", "Italy", "Denmark", "Russian Federation",
              "Spain", "Finland", "Australia", "Europe & Central Asia", "France", "Costa Rica", "United Kingdom", "Canada",
              "Chile", "United States", "North America", "Japan", "Mexico",
              "Latin America & Caribbean", "Brazil", "China", "East Asia & Pacific",
              "Bolivia", "Panama", "World", "Peru")) %>%
-  arrange(`Physiciansper1,000people2013-18`) # Reorder the data
+  arrange(`Out of pocket%ofcurrent2018`) # Reorder the data
 
-Health_Phys$`Physiciansper1,000people2013-18` <- as.numeric(as.character(Health_Phys$`Physiciansper1,000people2013-18`)) #Transform column character to numeric
+Health_Out$`Out of pocket%ofcurrent2018` <- as.numeric(as.character(Health_Out$`Out of pocket%ofcurrent2018`)) #Transform column character to numeric
 
-# Physicians Graphic
+# Out of pocket Graphic
 
-Health_Phys %>%
-  mutate(Country = fct_reorder(Country, `Physiciansper1,000people2013-18`)) %>%
-  ggplot(aes(x = Country, y = `Physiciansper1,000people2013-18`)) +
-  geom_segment(aes(x = Country, xend = Country, y = 0, yend = `Physiciansper1,000people2013-18`), color = ifelse(Health_Phys$Country %in% c("Chile"), "dodgerblue3", "gray58"), size = ifelse(Health_Phys$Country %in% c("Chile"), 1.1, 0.8)) +
-  geom_point(color = ifelse(Health_Phys$Country %in% c("Chile"), "dodgerblue3", "gray58"), size = ifelse(Health_Phys$Country %in% c("Chile"), 3.4, 2)) +
+Health_Out %>%
+  mutate(Country = fct_reorder(Country, `Out of pocket%ofcurrent2018`)) %>%
+  ggplot(aes(x = Country, y = `Out of pocket%ofcurrent2018`)) +
+  geom_segment(aes(x = Country, xend = Country, y = 0, yend = `Out of pocket%ofcurrent2018`), color = ifelse(Health_Out$Country %in% c("Chile"), "springgreen4", "gray58"), size = ifelse(Health_Out$Country %in% c("Chile"), 1.1, 0.8)) +
+  geom_point(color = ifelse(Health_Out$Country %in% c("Chile"), "springgreen4", "gray58"), size = ifelse(Health_Out$Country %in% c("Chile"), 3.4, 2)) +
   coord_flip() +
   theme_elegante() +
-  ylab("Physicians (per 1,000 people)") +
-  labs(title = paste("Physicians every 1,000 People by Country"), 
+  ylab("% of current health expenditure") +
+  labs(title = paste("Percentage of Household Income Invested\n", "in Health"), 
        caption = "World Health Organization's Global Health Workforce Statistics, OECD, supplemented by country data.",
-       subtitle = paste0("Situation of Chile and the World\n", "2013 - 2018" )) +
-    geom_text(aes(label = Health_Phys$`Physiciansper1,000people2013-18`), hjust = -.8, nudge_x = 0, color = "gray46", size = 3.1) +
+       subtitle = paste0("Situation of Chile and the World\n", "2018" )) +
+  geom_text(aes(label = Health_Out$`Out of pocket%ofcurrent2018`), hjust = -.8, nudge_x = 0, color = "gray46", size = 3.1) +
   theme(panel.grid.major.y = element_blank(), panel.border = element_blank(), axis.ticks.y = element_blank()) +
   theme(axis.title.y=element_blank(),
-        legend.position = "none")
-
+        legend.position = "none") +
+  scale_y_continuous(breaks = c(10, 20, 30, 40, 50, 60, 70))
 ```
